--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,22 @@
-version: '3.5'
-
+version: "3"
 services:
-  golang-mongo:
-    container_name: golang-mongo
-    image: mongo:5.0
-    ports:
-      - 27017:27017
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: pilput
-      MONGO_INITDB_ROOT_PASSWORD: password
+     mongodb:
+       image: mongo:5.0
+       container_name: mongofiberfull
+       restart: always
+       environment:
+          MONGO_INITDB_ROOT_USERNAME: pilput
+          MONGO_INITDB_ROOT_PASSWORD: pilput31
+       ports:
+         - "27017:27017"
+       volumes:
+         - mongodata:/data/db
+       networks:
+         - main
+  
+networks:
+  main:
+    external: true
+    
+volumes: 
+  mongodata:
