--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-MONGO_URI=mongodb://pilput:pilput31@localhost:27017
+#MONGO_URI=mongodb://pilput:pilput31@localhost:27017
+MONGO_URI=mongodb://localhost:27017
 MONGO_DATABASE=fiberfull
 MONGO_POOL_MIN=10
 MONGO_POOL_MAX=100
